# cxx-static-shared-example

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
all/: CMakeLists.txt
cmake/: exampleConfig.cmake  packaging.cmake  project-is-top-level.cmake  variables.cmake
cmake/packaging/common/: Description.txt  Welcome.txt
cmake/packaging/deb/: changelog  config.cmake  copyright  extra-strip.sh  package.sh  pre_build.cmake  toolchain.cmake
include/example/: main.h
source/: main.cpp
test/: CMakeLists.txt  example_test.cpp
